--- a/CharLoader.csproj
+++ b/CharLoader.csproj
@@ -271,6 +271,7 @@
 		<Compile Include="CustomAnimator.cs" />
 		<Compile Include="CustomBaseCharacter.cs" />
 		<Compile Include="CustomCharacter.cs" />
+		<Compile Include="CustomCharacterData_SO.cs" />
 		<Compile Include="CustomEffectSprite.cs" />
 		<Compile Include="CustomKoopaBroControl.cs" />
 		<Compile Include="CustomKoopaRedControl.cs" />
